Added View, like & dislike Counter & housekeeping

--- a/src/styles/LeftPanel.css
+++ b/src/styles/LeftPanel.css
@@ -1,6 +1,5 @@
 .sidebar {
-  min-height: 100vh;
-  max-height: 100%;
+  min-height: 100%;
   position: relative;
   width: 5em;
   background-color: #1F1D36;
