Final Commit (Hopefully)

--- a/src/styles/TopPanel.css
+++ b/src/styles/TopPanel.css
@@ -30,3 +30,12 @@
     padding: 2px 5px;
     padding-right: 25vh;
 }
+
+.notification-icon{
+    padding-right: 1.5%;
+}
+
+.notification{
+    padding-left: 20%;
+}
+  
