--- a/src/styles/RightPanel.css
+++ b/src/styles/RightPanel.css
@@ -3,7 +3,7 @@
   color: rgba(255, 255, 255, 0.856);
   min-height: 100vh;
   position: absolute;
-  width: 30%; /* subtract the width of the left panel */
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -18,7 +18,7 @@
   margin-bottom: 20px;
   width: 100%;
   max-width: 800px;
-  justify-content: flex-start; /* add this line */
+  justify-content: flex-start;
 }
 
 .video img {
